--- a/WeatherDataCollector/pom.xml
+++ b/WeatherDataCollector/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>voynap.springcourse</groupId>
-	<artifactId>FirstRestApp</artifactId>
+	<artifactId>WeatherDataCollector</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>FirstRestApp</name>
 	<description>Demo project for Spring Boot</description>
