--- a/WeatherDataCollector/src/main/resources/application.properties
+++ b/WeatherDataCollector/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/project3_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
